# Murl

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
docs/: Doxyfile
include/: audio_stream.hh  logo.h
lib/: CMakeLists.txt
lib/src/: murl.cc
shaders/: default.frag.glsl  default.vert.glsl
src/: main.cc
test/: CMakeLists.txt
test/src/: murl_test.cc
